feat: add modal create course

--- a/src/styles/MyCoursePage.css
+++ b/src/styles/MyCoursePage.css
@@ -36,3 +36,13 @@
 .option-button{
     margin: 20px;
 }
+
+.modalCreateCourses{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#description{
+    padding-bottom: 50px;
+}
