--- a/src/styles/MyCoursePage.css
+++ b/src/styles/MyCoursePage.css
@@ -37,11 +37,41 @@
     margin: 20px;
 }
 
-.modalCreateCourses{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn-flotante {
+	font-size: 16px; /* Cambiar el tamaño de la tipografia */
+	text-transform: uppercase; /* Texto en mayusculas */
+	font-weight: bold; /* Fuente en negrita o bold */
+	color: #ffffff; /* Color del texto */
+	border-radius: 80px; /* Borde del boton */
+	letter-spacing: 2px; /* Espacio entre letras */
+	background-color: #6c757d; /* Color de fondo */
+	padding: 15px 15px; /* Relleno del boton */
+	position: fixed;
+	bottom: 40px;
+	right: 40px;
+	transition: all 300ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	z-index: 99;
 }
+.btn-flotante:hover {
+	background-color: rgb(227, 226, 223); /* Color de fondo al pasar el cursor */
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
+} 
+
+.addCourseIcon{
+    width: 50px;
+    height: 50px
+}
+
 
 #description{
     padding-bottom: 50px;
