--- a/src/styles/MyCoursePage.css
+++ b/src/styles/MyCoursePage.css
@@ -48,7 +48,7 @@
 	padding: 15px 15px; /* Relleno del boton */
 	position: fixed;
 	bottom: 40px;
-	right: 40px;
+	right: 33px;
 	transition: all 300ms ease 0ms;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	z-index: 99;
@@ -57,6 +57,14 @@
 	background-color: rgb(227, 226, 223); /* Color de fondo al pasar el cursor */
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
 	transform: translateY(-7px);
+}
+
+.btn-modal-temp {
+	bottom: 140px;
+	background-color: #6b8fae;
+}
+.btn-modal-temp:hover {
+	background-color: #89abc8;
 }
 @media only screen and (max-width: 600px) {
  	.btn-flotante {
