feat Update classes on hold. fix: minor console bugs, The loading of modules by backend was modified and icon of MyCoursePage was modified

--- a/src/styles/DragAndDrop.css
+++ b/src/styles/DragAndDrop.css
@@ -1,7 +1,6 @@
 #form-file-upload {
     height: 10rem;
-    width: 20rem;
-    max-width: 100%;
+    width: 100%;
     text-align: center;
     position: relative;
   }
