--- a/src/styles/PageRouter.css
+++ b/src/styles/PageRouter.css
@@ -22,11 +22,11 @@
 
 .hidden-button {  
     border-radius: 80px;
-    background-color: #6c757d;
+    background-color: #858b90;
     color: #ffffff;
     padding: 15px 15px;
     position: fixed;
-    top: 40px;
+    top: 20px;
     transition: all 300ms ease 0ms;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     margin-left: 1%;
@@ -34,7 +34,7 @@
 }
 
 .hidden-button:hover {
-    background-color: rgb(227, 226, 223); /* Color de fondo al pasar el cursor */
+    background-color: rgb(251, 249, 245); /* Color de fondo al pasar el cursor */
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
 	transform: translateY(-7px);
 }
@@ -48,7 +48,7 @@
    }
 } 
 
-.arrowIcon{
+.navBarIcon{
     width: 50px;
     height: 50px;
 }
