--- a/src/styles/PageRouter.css
+++ b/src/styles/PageRouter.css
@@ -1,54 +1,59 @@
 .routes {
-    position: relative;
-    height: 100vh;
-    transition: margin-left .5s;
-    width: 100%;
+  position: relative;
+  height: 100vh;
+  transition: margin-left 0.5s;
+  width: 100%;
 }
 
 .sidebar {
-    position: absolute;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    width:  20%;
-    z-index: 0;
-    left: 0;
-    overflow-x: hidden;
-    transition: 0.5s;
+  position: absolute;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  width: 20%;
+  z-index: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
 }
 
 .principal-container {
-    display: flex;
+  display: flex;
 }
 
-.hidden-button {  
-    border-radius: 80px;
-    background-color: #858b90;
-    color: #ffffff;
-    padding: 15px 15px;
-    position: fixed;
-    top: 20px;
-    transition: all 300ms ease 0ms;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    margin-left: 1%;
-    z-index: 99;
+.hidden-button {
+  border-radius: 80px;
+  background-color: #858b90;
+  color: #ffffff;
+  padding: 15px 15px;
+  position: fixed;
+  top: 20px;
+  transition: all 300ms ease 0ms;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  margin-left: 1%;
+  z-index: 99;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hidden-button:hover {
-    background-color: rgb(251, 249, 245); /* Color de fondo al pasar el cursor */
-	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
-	transform: translateY(-7px);
+  background-color: rgb(251, 249, 245); /* Color de fondo al pasar el cursor */
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+  transform: translateY(-7px);
 }
 
 @media only screen and (max-width: 600px) {
-    .hidden-button {
-       font-size: 14px;
-       padding: 12px 20px;
-       bottom: 20px;
-       right: 20px;
-   }
-} 
+  .hidden-button {
+    font-size: 14px;
+    padding: 12px 20px;
+    bottom: 20px;
+    right: 20px;
+  }
+}
 
-.navBarIcon{
-    width: 50px;
-    height: 50px;
+.navBarIcon {
+  width: 50px;
+  height: 50px;
 }
